--- a/Travel Landing page/index.html
+++ b/Travel Landing page/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Landing Page 1</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="index.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
